--- a/polynap/Resources/Localizations/Auth.xcstrings
+++ b/polynap/Resources/Localizations/Auth.xcstrings
@@ -23,6 +23,18 @@
             "value" : "ローカルユーザー"
           }
         },
+        "ms" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pengguna Tempatan"
+          }
+        },
+        "th" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ผู้ใช้ภายในเครื่อง"
+          }
+        },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
